--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,6 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+rpc_url = "https://base-mainnet.g.alchemy.com/v2/GPB8OgysaqDO2hsoib09zl0-ax9t9nzY"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
